@@ -1,3 +1,7 @@
+-------------------------- soilDB 1.7 (2016-02-16) ----------------------------
+* bug fix in SDA_query(), due to changes in httr::content. Thanks Kyle Bocinsky for the fix!
+* SDA_query() now returns SQL errors generated by SDA
+
 -------------------------- soilDB 1.6.9 (2015-12-28) ----------------------------
 * clean-up in local NASIS queries, removed extra parens
 * NASIS component query function overhaul: previous code may be broken, details pending
